<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="57dp"
        android:background="@drawable/oramovanie_polozka">

        <TextView
            android:id="@+id/nazov_polozky"
            android:layout_width="185dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:text="@string/nazov_polo_ky"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.026"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/pocet"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginStart="2dp"
            android:background="@drawable/oramovanie_cena"
            android:gravity="center"
            android:text="@string/_0"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/uber"
            app:layout_constraintTop_toTopOf="@+id/nazov_polozky"
            tools:ignore="TextSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/pridaj"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:layout_marginStart="2dp"
            android:background="@color/green"
            android:text="@string/plus"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/pocet"
            app:layout_constraintTop_toTopOf="@+id/nazov_polozky"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/uber"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:background="#F44336"
            android:text="@string/minus"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/nazov_polozky"
            app:layout_constraintTop_toTopOf="@+id/nazov_polozky"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>