<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#093D30"
    tools:context=".fragmenty.UvodnyFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="400dp"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo_kaviarne" />

    <TextView
        android:id="@+id/text_den_vklad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/denny_vklad"
        android:textColor="#D7AB46"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/vklad_hodnota"
        android:layout_width="203dp"
        android:layout_height="57dp"
        android:background="@drawable/oramovanie_vklad"
        android:ems="10"
        android:gravity="center"
        android:hapticFeedbackEnabled="false"
        android:hint="@string/zadajte_v_ku_vkladu"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_den_vklad"
        app:layout_constraintVertical_bias="0.179"
        tools:ignore="Autofill,LabelFor" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/potvrdit"
        android:layout_width="156dp"
        android:layout_height="49dp"
        android:background="@drawable/oramovanie_button"
        android:backgroundTintMode="screen"
        android:hapticFeedbackEnabled="false"
        android:text="@string/potvrdi"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vklad_hodnota"
        app:layout_constraintVertical_bias="0.107"
        tools:ignore="TextContrastCheck,TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>